# weather-app

./: .env.dev  .env.example  .env.prod  .gitignore  main.py  package-lock.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
frontend/: TAILWIND_README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
tests/: test_weather.py
weather_app/: __main__.py  api.py  config.py  logger.py  weather.py
