[tool.poetry]
name = "weather-app"
version = "0.1.0"
description = "Application simple pour afficher la météo d'une ville"
authors = ["Utilisateur <user@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
dev = "ENV=dev python main.py"
prod = "ENV=prod python main.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"